--- a/2.Second Web Page/style.css
+++ b/2.Second Web Page/style.css
@@ -15,11 +15,13 @@ body {
     height: 150px;
 }
 
+/*
 #brand {
     float: left;
     margin: 0 50px;
     padding: 20px 10px;
 }
+*/
 
 .one {
     float: right;
@@ -27,7 +29,7 @@ body {
     padding: 0 30px 0;
 }
 #signin a {
-    color: #eea23d;
+   
     font-weight: bold;
     text-decoration: none;
     margin: 10px;
@@ -39,10 +41,12 @@ body {
     margin: 10px;
 }
 
+/*
 h1 a {
     color: #b8a4f3;
     text-decoration: none;
 }
+*/
 
 #searchBox {
     float: right;
